--- a/style.css
+++ b/style.css
@@ -1,33 +1,37 @@
 body {
 	background-color: hsla(215, 15%, 25%, 1);
 	color: hsla(0, 0%, 100%, 1);
+	font-size: 100%;
 	font-family: Calibri;
-	padding: 50px
+	padding: 2.5%
 }
 
 h1 {
 	text-align: center;
+	font-size: 26px;
+	padding: 1.5%;
 }
 
-ul {
+ul.topnav {
 	list-style-type: none;
-    margin: 0;
-    padding: 0;
+    margin: 0%;
+    padding: 1%;
     overflow: hidden;
     background-color: #333;
     position: fixed;
-    top: 0;
+	top: 0;
     width: 100%;
+	text-align: center;
 }
 
-li {
+ul.topnav li {
 	float: left;
 }
 
-li a{
+ul.topnav li a{
 	display: block;
-	width: 100%;
-	padding: 14px;
+	width: auto;
+	padding: 10px;
 	text-align: center;
 	text-decoration: none;
 }
