--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 	font-family: Calibri;
 	overflow: auto;
 	float: left;
-	background: linear-gradient(124deg, #ff2400, #e81d1d, #e8b71d, #e3e81d, #1de840, #1ddde8, #2b1de8, #dd00f3, #dd00f3);
+	background: linear-gradient(124deg, hsl(8, 100%, 50%), hsl(0, 82%, 51%), hsl(46, 8#e3e81d), hsl(61, 82%, 51%), hsl(130, 82%, 51%), hsl(183, 82%, 51%), hsl(244, 82%, 51%), hsl(295, 100%, 48%), hsl(295, 100%, 48%));
 	background-size: 1800% 1800%;
 	
 	-webkit-animation: rainbow 18s ease infinite;
