--- a/style.css
+++ b/style.css
@@ -1,11 +1,3 @@
-body {
-	background-color: hsla(0, 0%, 100%, 1);
-	color: hsla(0, 0%, 100%, 1);
-	font-size: 24px;
-	font-family: Calibri;
-	float: left;
-}
-
 .gradientBackground { 
 	content: "";
 	position: absolute;
@@ -13,13 +5,12 @@ body {
 	height: 100%;
 	top: 0;
 	left: 0;
-	overflow: hidden;
 	background: -webkit-linear-gradient(124deg, hsla(8, 100%, 50%, 1), hsla(0, 82%, 51%, 1), hsla(46, 82%, 51%, 1), hsla(61, 82%, 51%, 1), hsla(130, 82%, 51%, 1), hsla(183, 82%, 51%, 1), hsla(244, 82%, 51%, 1), hsla(295, 100%, 48%, 1), hsla(295, 100%, 48%, 1));
 	background: -o-linear-gradient(124deg, hsla(8, 100%, 50%, 1), hsla(0, 82%, 51%, 1), hsla(46, 82%, 51%, 1), hsla(61, 82%, 51%, 1), hsla(130, 82%, 51%, 1), hsla(183, 82%, 51%, 1), hsla(244, 82%, 51%, 1), hsla(295, 100%, 48%, 1), hsla(295, 100%, 48%, 1));
 	background: -moz-linear-gradient(124deg, hsla(8, 100%, 50%, 1), hsla(0, 82%, 51%, 1), hsla(46, 82%, 51%, 1), hsla(61, 82%, 51%, 1), hsla(130, 82%, 51%, 1), hsla(183, 82%, 51%, 1), hsla(244, 82%, 51%, 1), hsla(295, 100%, 48%, 1), hsla(295, 100%, 48%, 1));
 	background: linear-gradient(124deg, hsla(8, 100%, 50%, 1), hsla(0, 82%, 51%, 1), hsla(46, 82%, 51%, 1), hsla(61, 82%, 51%, 1), hsla(130, 82%, 51%, 1), hsla(183, 82%, 51%, 1), hsla(244, 82%, 51%, 1), hsla(295, 100%, 48%, 1), hsla(295, 100%, 48%, 1));
 	background-size: 1800% 1800%;
-	
+
 	-webkit-animation: rainbow 18s ease infinite;
 	-z-animation: rainbow 18s ease infinite;
 	-o-animation: rainbow 18s ease infinite;
@@ -46,22 +37,32 @@ body {
 		100%{background-position:0% 82%}
 	}
 
+body {
+	background-color: hsla(215, 15%, 25%, 1);
+	color: hsla(0, 0%, 100%, 1);
+	font-size: 24px;
+	font-family: Calibri;
+	float: left;
+}
+
+
 
 h1 {
 	text-align: center;
 	font-size: 80px;
 	padding: 20px 100px;
+	position: absolute;
 }
 
-.indexquestions{
+.indexquestions, .indexparagraphs{
+	display: flex;
+	flex-direction: column;
 	padding: 0.0005% 2%;
-}
-
-.indexparagraphs {
-	padding: 0.0005% 2%;
+	position: absolute;
 }
 
 .halEye {
+	position: absolute;
 	background: -webkit-radial-gradient(white, red 20%, black);
 }
 
@@ -110,4 +111,5 @@ a:active {
 a:visited {
 	color: hsla(0, 0%, 85%, 0.9)
 }
+
 
