--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .gradientBackground { 
 	content: "";
-	position: absolute;
+	position: fixed;
 	width: 100%;
 	height: 100%;
 	top: 0;
@@ -39,9 +39,8 @@
 
 body {
 	background-color: hsla(215, 15%, 25%, 1);
-	color: hsla(0, 0%, 100%, 1);
-	font-size: 24px;
-	font-family: Calibri;
+	color: rgb(255, 255, 255);
+	background: -webkit-linear-gradient(0deg, hsla(0, 0%, 50%, 1));
 	float: left;
 }
 
@@ -51,18 +50,21 @@ h1 {
 	text-align: center;
 	font-size: 80px;
 	padding: 20px 100px;
-	position: absolute;
+	position: relative;
+	font-family: Sans-Serif;
 }
 
 .indexquestions, .indexparagraphs{
+	font-size: 28px;
 	display: flex;
 	flex-direction: column;
 	padding: 0.0005% 2%;
-	position: absolute;
+	position: relative;
+	font-family: Sans-Serif;
 }
 
 .halEye {
-	position: absolute;
+	position: relative;
 	background: -webkit-radial-gradient(white, red 20%, black);
 }
 
@@ -73,10 +75,12 @@ ul.topnav {
     padding: 0.1%;
     overflow: hidden;
     background-color: hsla(0, 0%, 75%, 0.25);
-    position: fixed;
+    position: relative;
     width: auto;
 	text-align: center;
-	backdrop-filter: blur(5px)
+	backdrop-filter: blur(5px);
+	font-family: Sans-Serif;
+	font-size: 24px;
 }
 
 ul.topnav li {
@@ -84,6 +88,7 @@ ul.topnav li {
 }
 
 ul.topnav li a{
+	position: relative;
 	display: flex;
 	margin: auto;
 	padding: 10px;
