--- a/style.css
+++ b/style.css
@@ -37,26 +37,40 @@
 		100%{background-position:0% 82%}
 	}
 
-body {
+body::-webkit-scrollbar {
 	background-color: hsla(215, 15%, 25%, 1);
 	color: hsl(0, 0%, 15%);
 	background: -webkit-linear-gradient(0deg, hsla(0, 0%, 50%, 1));
-	float: left;
+	float: none;
+	overflow-wrap: normal;
+	display: none; /* Removes scrollbar for Chrome, Safari and Opera */
+	scrollbar-width: none; /* Removes scrollbar for IE and Edge */
+	-ms-overflow-style: none; /* Removes scrollbar for Firefox */
 }
 
 h1 {
 	text-align: center;
-	font-size: 400%;
+	font-size: 5rem;
 	padding: 1;
 	position: relative;
 	font-family: Sans-Serif;
 }
 
-.indexquestions, .indexparagraphs{
+.indexquestions{
+	text-align: center;
 	font-size: 3em;
 	display: flex;
 	flex-direction: column;
-	padding: 1em 2em;
+	padding: 0.5em 10em;
+	position: relative;
+	font-family: Sans-Serif;
+}
+.indexparagraphs{
+	text-align: center;
+	font-size: 2em;
+	display: flex;
+	flex-direction: column;
+	padding: 0.5em 10em;
 	position: relative;
 	font-family: Sans-Serif;
 }
@@ -66,39 +80,45 @@ h1 {
 	background: -webkit-radial-gradient(white, red 20%, black);
 }
 
-ul.topnav {
-	border-radius: 1em;
+div.topnav {
+	border-radius: 0.75em;
 	list-style-type: none;
+	position: relative;
+
     margin: 1%;
-    padding: 1em;
+	padding: 10px; /* Top padding is absolute the other scales */
+    padding: 0.5em;
+
     overflow: hidden;
+
     background-color: hsla(0, 0%, 75%, 0.25);
-    position: relative;
-    width: auto;
-	text-align: center;
 	backdrop-filter: blur(0.335em);
+
+	text-align: center;
 	font-family: Sans-Serif;
 	font-size: 2em;
 }
 
-ul.topnav li {
+div.topnav li {
 	float: left;
 	position: relative;
 }
 
-ul.topnav li a{
+div.topnav li a{
+	align-self: center;
 	position: relative;
 	display: flex;
 	margin: auto;
-	padding: 1.5em;
+	padding: 10px;
+	padding: 0.5em;
 	text-align: center;
 	text-decoration: none;
 	transition: box-shadow 200ms;
 }
 
 .topnav:hover{
-	box-shadow: hsl(211, 40%, 72%);
 	position: relative;
+	box-shadow: hsl(211, 40%, 72%);
 }
 
 a:link {
