--- a/style.css
+++ b/style.css
@@ -83,11 +83,15 @@ h1 {
 	font-family: Sans-Serif;
 }
 
-.html5Img {  /* Should add an image to the HTML page */
-	width: 10px;
-	height: 15px;
-	position: relative;
-}
+/*
+
+	.html5Img {   Should add an image to the HTML page
+		width: 10px;
+		height: 15px;
+		position: relative;
+	}
+
+*/
 
 .htmlHeaders {
 	text-align: center;
@@ -98,7 +102,7 @@ h1 {
 	font-family: Sans-Serif;
 }
 
-.htmlPararaphs {
+.htmlParagraphs {
 	text-align: center;
 	font-size: 2em;
 	display: block;
@@ -206,7 +210,8 @@ a:visited {
 	font-family: Sans-Serif;
 }
 
-#cmdMultiply {
+#cmdMultiply, #cmdDecimal {
+	align-self: center;
 	text-align: center;
 	font-size: 0.75em;
 	display: block;
